# phable

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yaml
phable/: cache.py  cli.py  config.py  display.py  phabricator.py  task.py  utils.py
phable/cli/: _alias.py  assign.py  cache.py  comment.py  create.py  edit.py  list.py  main.py  move.py  move_project_tasks.py  parent.py  report.py  set.py  show.py  status.py  subscribe.py  tag.py  utils.py
phable/tests/: cli_list_test.py  conftest.py  exploratory_test.py  integration_test.py  phabricator_test.py  test_exploratory.py  test_phabricator.py  test_utils.py
phable/tests/cli/: conftest.py  test_list.py  test_set.py  test_show.py
phable/tests/cli/fixtures/: current_user.json  find_subtasks.json  show_task.json  show_user.json  tasks_for_current_user.json
phable/tests/fixtures/: edit_task_response.json  milestones.json  project_columns.json  target_project_columns.json  tasks_in_column.json
phable_cli/: cache.py  cli.py  config.py  phabricator.py
phable_cli/tests/: conftest.py  phabricator_test.py
