[tool.poetry]
name = "phable-cli"
version = "0.1.17"
description = "Manage Phabricator tasks from the comfort of your terminal"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "phable" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.8"
pytest = "^8.3.5"

[tool.poetry.scripts]
phable = 'phable.cli.main:runcli'

[tool.poetry.group.dev.dependencies]
responses = "^0.25.7"
pytest = "^8.3.5"
ruff = "^0.15.7"
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
addopts = "-s"
