[tool.poetry]
name = "phable-cli"
version = "0.1.17"
description = "Manage Phabricator tasks from the comfort of your terminal"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "phable" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.8"

[tool.poetry.scripts]
phable = 'phable.cli.main:runcli'

[tool.poetry.group.dev.dependencies]
responses = "^0.25.7"
pytest = "^9.0.0"
ruff = "^0.15.7"
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -m 'not integration'"
markers = [
    "integration: marks tests as integration tests requiring a live Phabricator instance (run with: pytest -m integration)",
]

[tool.mypy]
exclude = [
    "^phable/tests/$",
]
